--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,29 @@
     <!--Шапка сайта-->
   <header class="header">
     <div class="container border-header">
-    <nav class="site-nav">
+      <nav class="site-nav">
         <a href="./index.html" class="logo accent">Web<span class="logo-title">Studio</span></a>
         <ul class="list navigation">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
-            <li class="item"><a href="" class="link current">Портфолио</a></li>
-            <li class="item"><a href="" class="link">Контакты</a></li>
+          <li class="item"><a href="./index.html" class="link ">Студия</a></li>
+          <li class="item"><a href="" class="link current">Портфолио</a></li>
+          <li class="item"><a href="" class="link">Контакты</a></li>
         </ul>
-    </nav>
-
-    <ul class="site-nav list">
-        <li class="item"><a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a></li>
-        <li class="item"><a href="tel:+380961111111" class="contact link">+38 096 111 11 11</a></li>
-    </ul>
+      </nav>
+  
+      <ul class="site-nav list">
+        <li class="item mail">
+          <a href="mailto:info@devstudio.com" class="contact link">
+            <svg class="mail-link-header" width="16" height=12>
+              <use href="./images/icons.svg/symbol-defs.svg#icon-envelope"></use>
+            </svg>info@devstudio.com</a>
+        </li>
+        <li class="item mail">
+          <a href="tel:+380961111111" class="contact link">
+            <svg class="mail-link-header" width="10" height=16>
+              <use href="./images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
+            </svg>+38 096 111 11 11</a>
+        </li>
+      </ul>
     </div>
   </header>
 
@@ -71,9 +81,10 @@
                 <h2 class="project title">Ресторан Seafood</h2>
                 <p class="project text">Приложение</p>
               </div>
+              </a>
         </li>
         <li class="item-card">
-              <a href="" class="link-project"><img src="./images/projects/img-4.jpg" alt="наушники" width="370" height="294"></a>
+              <a href="" class="link-project"><img src="./images/projects/img-4.jpg" alt="наушники" width="370" height="294">
               <div class="container-title-project">
                 <h2 class="project title">Проект Prime</h2>
                 <p class="project text">Маркетинг</p>
@@ -128,18 +139,49 @@
     <!--Футер-->
   <footer class="footer">
     <div class="container">
-    <a href="" class="logo accent">Web<span class="logo-title">Studio</span></a>
-    <address class="address-contacts">
-      <ul class="list contacts">
-        <li class="item-address"><a href="https://goo.gl/maps/BCXKGSPmEop6mJhy6" target="_blank" rel="noreferrer noopener" class="address link">г. Киев,
-            пр-т Леси Украинки,
-            26</a></li>
-        <li class="item-address"><a href="mailto:info@devstudio.com" class="contact link item">info@devstudio.com</a></li>
-        <li class="item-address"><a href="tel:+380961111111" class="contact link">+38 096 111 11 11</a></li>
-      </ul>
-    </address>
+      <div class="contacts-nav">
+        <a href="" class="logo accent">Web<span class="logo-title">Studio</span></a>
+        <address class="address-contacts">
+          <ul class="list contacts">
+            <li class="item-address"><a href="https://goo.gl/maps/BCXKGSPmEop6mJhy6" target="_blank"
+                rel="noreferrer noopener" class="address link">г. Киев,
+                пр-т Леси Украинки,
+                26</a></li>
+            <li class="item-address"><a href="mailto:info@devstudio.com" class="contact link item">info@devstudio.com</a>
+            </li>
+            <li class="item-address"><a href="tel:+380961111111" class="contact link">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
+  
+  
+      <div class="container-social">
+        <h2 class="title social-link-list">присоединяйтесь</h2>
+        <ul class="list social">
+          <li class="social-link"><a class="icon-link" href="">
+              <svg width="20" height="20" class="icon-link-social">
+                <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a></li>
+          <li class="social-link"><a class="icon-link" href="">
+              <svg width="20" height="20" class="icon-link-social">
+                <use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a></li>
+          <li class="social-link"><a class="icon-link" href="">
+              <svg width="20" height="20" class="icon-link-social">
+                <use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a></li>
+          <li class="social-link"><a class="icon-link" href="">
+              <svg width="20" height="20" class="icon-link-social">
+                <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a></li>
+        </ul>
+      </div>
+  
     </div>
-  </footer> 
-
+  </footer>>
 </body>
 </html>
