--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
 
             <!-- Клиенты -->
         <section class="section">
+            <div class="container">
             <h2 class="title centered">Постоянные клиенты</h2>
             <ul class="list clients">
                 <li class="clients-link"><a class="icon-clients" href="">
@@ -272,6 +273,7 @@
                         </svg>
                     </a></li>
             </ul>
+            </div>
         </section>
     </main>
 
